--- a/user/om_73/range rover/pricing.html
+++ b/user/om_73/range rover/pricing.html
@@ -18,6 +18,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
 
         body {
+            display: none;
             color: rgb(0, 0, 0);
             background: rgb(255, 255, 255);
             user-select: none
@@ -75,30 +76,41 @@
         }
 
         .container {
-            background-color: #fafafa;
-            box-shadow: 5px 5px 5px rgba(65, 65, 65, 0.083);
+            background-color: #ffffff;
+            /*box-shadow: 5px 5px 5px rgba(65, 65, 65, 0.083); */
+            border: 1px rgb(235, 235, 235) solid;
             margin: 40px 20px;
+            padding: 10px;
+            border-radius: 28px;
+            overflow: hidden;
+            height: 250px;
+            max-width: 1320px;
+            min-width: 1000px;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
         }
 
         .car-detail {
             float: right;
             font-family: 'Jost', sans-serif;
-            width: 78%
+            max-width: 880px;
+            width: 70%
+
         }
 
         .car-img {
-            width: 22%
+            height: 100%;
+            max-height: 100%;
+            border-radius: 28px;
         }
 
         .car-title {
-            color: var(--richColor);
-            text-shadow: 0 0 10px rgba;
+            color: #e0b68c;
             font-family: 'Cinzel', serif;
+            font-weight: 700;
             letter-spacing: 2px;
             padding: 10px 20px;
             height: fit-content;
-            font-size: 20px;
+            font-size: 27px;
             margin: 10px 0
         }
 
@@ -197,42 +209,42 @@
     <div class="car-detail">
         <div class="car-title">Land Rover Range Rover ...</div>
         <div class="car-info"> Diesel/Petrol • Automatic </div>
-        <div class="car-price"> Rs.2.32 - 3.41 Cr* </div> <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-price"> Rs.2.32 - 3.41 Cr* </div> <br><br> <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
 </div>
 <div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover-Velar/8456/1623994273592/front-left-side-47.jpg?impolicy=resize&imwidth=480">
     <div class="car-detail">
         <div class="car-title">Range Rover Velar</div>
         <div class="car-info"> Diesel/Petrol • Automatic </div>
-        <div class="car-price"> 86.75 Lakh* </div> <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover-velar">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-price"> 86.75 Lakh* </div> <br><br> <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover-velar">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
 </div>
 <div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Defender/7641/1624347789462/front-left-side-47.jpg?impolicy=resize&imwidth=480">
     <div class="car-detail">
         <div class="car-title">Range Rover Defender</div>
         <div class="car-info"> Diesel/Petrol • Automatic </div>
-        <div class="car-price"> Rs.80.72 Lakh - 1.22 Cr* </div> <a class="know-more" href="https://www.cardekho.com/land-rover/defender">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-price"> Rs.80.72 Lakh - 1.22 Cr* </div> <br><br> <a class="know-more" href="https://www.cardekho.com/land-rover/defender">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
 </div>
 <div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover-Evoque/8492/1646300904361/front-left-side-47.jpg?impolicy=resize&imwidth=480">
     <div class="car-detail">
         <div class="car-title">Range Rover Evoque</div>
         <div class="car-info"> Diesel/Petrol • Automatic </div>
-        <div class="car-price"> Rs.69.99 Lakh* </div> <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover-evoque">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-price"> Rs.69.99 Lakh* </div> <br><br> <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover-evoque">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
 </div>
 <div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover-Sport/8044/1646805517250/front-left-side-47.jpg?impolicy=resize&imwidth=480">
     <div class="car-detail">
         <div class="car-title">Range Rover Sport</div>
         <div class="car-info"> Diesel/Petrol • Automatic </div>
-        <div class="car-price"> Rs.91.27 Lakh - 2.19 Cr* </div> <a class="know-more" href="https://www.cardekho.com/carmodels/Land_Rover/Land_Rover_Range_Rover_Sport">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-price"> Rs.91.27 Lakh - 2.19 Cr* </div> <br><br> <a class="know-more" href="https://www.cardekho.com/carmodels/Land_Rover/Land_Rover_Range_Rover_Sport">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
 </div>
 <div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Discovery/8514/1646805311941/front-left-side-47.jpg?impolicy=resize&imwidth=480">
     <div class="car-detail">
         <div class="car-title">Range Rover Discovery</div>
         <div class="car-info"> Diesel/Petrol • Automatic </div>
-        <div class="car-price"> Rs.88.06 Lakh - 1.20 Cr* </div> <a class="know-more" href="https://www.cardekho.com/carmodels/Land_Rover/Land_Rover_Range_Rover_Sport">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-price"> Rs.88.06 Lakh - 1.20 Cr* </div> <br><br> <a class="know-more" href="https://www.cardekho.com/carmodels/Land_Rover/Land_Rover_Range_Rover_Sport">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
 </div>
 <div class="rr-btn" onclick="more()">
