--- a/user/om_73/range rover/index.html
+++ b/user/om_73/range rover/index.html
@@ -31,11 +31,13 @@
         font-family: 'Cinzel', serif;
         letter-spacing: 1px;
         text-shadow: 0 0 10px rgba(255, 0, 0, 0);
+        background: #fff;
         padding: 10px 20px;
         border-bottom: 2px rgba(214, 214, 214, 0) solid;
         font-size: 40px;
         margin: 15%;
-        height: 30vh
+        height: 100vh;
+        z-index: 20;
     }
 
     .nav-ic {
@@ -44,6 +46,23 @@
 
     .nav-strg {
         display: block
+    }
+
+    .mod-inf{
+        font-size: 14px;
+        text-decoration: underline;
+    }
+    .ic-chevron{
+        font-size: 12px;
+        margin-right: 5px;
+    }
+
+    .hvr-img{
+        background-color: var(--richColor);
+        opacity: 1;
+    }
+    .hvr-img:hover{
+        opacity: .7;
     }
 
     .container {
@@ -90,7 +109,8 @@
     .app-right {
         float: right;
         width: 30%;
-        transform: rotate(3deg);
+        border-radius: 4px;
+        transform: rotate(0deg);
         margin: 20px 40px;
         box-shadow: 10px 10px 0px var(--shadow);
         transition: all 0.2s ease;
@@ -206,25 +226,24 @@
   <div class="section-title">
    <h2>Expanded Line</h2>
   </div>
-  <div class="gr-card"> <img class="gr-img" src="https://images.hdqwalls.com/download/range-rover-evoque-tuned-1280x720.jpg">
+  <div class="gr-card" onclick="expanded()"> <img class="gr-img hvr-img" draggable="false" src="https://images.hdqwalls.com/download/range-rover-evoque-tuned-1280x720.jpg">
    <div class="gr-details">
     <h4> Range Rover Evoque</h4>
-    <div class="sh-detail-primary"> The Land Rover Range Rover Evoque has 1 Diesel Engine and 1 Petrol Engine on offer. The Diesel engine is 1997 cc while the Petrol engine is 1997 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Range Rover Evoque has a mileage of & Ground clearance of Range Rover Evoque is 212mm. The Range Rover Evoque is a 5 seater 4 cylinder car and has length of 4371mm, width of 2100mm and a wheelbase of 2681mm. <br> • Transmission Type: Automatic<br> • Fuel Type: Diesel<br> • Top Speed: 230 KM/H<br> • Price: 69.99 Lakh<br> </div>
-    <p class="know-more" onclick="expanded()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+    <div class="sh-detail-primary"> The Land Rover Range Rover Evoque has 1 Diesel Engine and 1 Petrol Engine on offer. The Diesel engine is 1997 cc while the Petrol engine is 1997 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Range Rover Evoque has a mileage of & Ground clearance of Range Rover Evoque is 212mm. The Range Rover Evoque is a 5 seater 4 cylinder car and has length of 4371mm, width of 2100mm and a wheelbase of 2681mm.
+       </div>
    </div>
   </div>
-  <div class="gr-card"> <img class="gr-img" src="https://images.hdqwalls.com/download/2018-land-rover-range-rover-vela-qu-1280x720.jpg">
+  <div class="gr-card" onclick="expanded()"> <img class="gr-img hvr-img" draggable="false" src="https://images.hdqwalls.com/download/2018-land-rover-range-rover-vela-qu-1280x720.jpg">
    <div class="gr-details">
     <h4> Range Rover Velar</h4>
-    <div class="sh-detail-primary"> The Land Rover Range Rover Velar has 1 Diesel Engine and 1 Petrol Engine on offer. The Diesel engine is 1999 cc while the Petrol engine is 1997 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Range Rover Velar has a mileage of 15.8 kmpl . The Range Rover Velar is a 5 seater 4 cylinder car and has length of 4797mm, width of 2145mm and a wheelbase of 2874mm. <br> • Transmission Type: Automatic<br> • Fuel Type: Petrol<br> • Top Speed: 217 KM/H<br> • Price: 86.75 Lakh<br> </div>
-    <p class="know-more" onclick="expanded()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+    <div class="sh-detail-primary"> The Land Rover Range Rover Velar has 1 Diesel Engine and 1 Petrol Engine on offer. The Diesel engine is 1999 cc while the Petrol engine is 1997 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Range Rover Velar has a mileage of 15.8 kmpl . The Range Rover Velar is a 5 seater 4 cylinder car and has length of 4797mm, width of 2145mm and a wheelbase of 2874mm. </div>
    </div>
   </div>
-  <div class="gr-card"> <img class="gr-img" src="https://static.autox.com/uploads/2020/11/2021-Land-Rover-Discovery.jpg">
+  <div class="gr-card" onclick="expanded()"> <img class="gr-img hvr-img" draggable="false" src="https://static.autox.com/uploads/2020/11/2021-Land-Rover-Discovery.jpg">
    <div class="gr-details">
     <h4> Range Rover Discovery</h4>
-    <div class="sh-detail-primary"> The Land Rover Discovery has 1 Diesel Engine and 3 Petrol Engine on offer. The Diesel engine is 2996 cc while the Petrol engine is 1997 cc and 2996 cc and 2995 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Discovery has a mileage of . The Discovery is a 7 seater 4 cylinder car. <br> • Transmission Type: Automatic<br> • Fuel Type: Diesel<br> • Top Speed: Undefined<br> • Price: 86.75 Lakh<br> </div>
-    <p class="know-more" onclick="expanded()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+    <div class="sh-detail-primary"> The Land Rover Discovery has 1 Diesel Engine and 3 Petrol Engine on offer. The Diesel engine is 2996 cc while the Petrol engine is 1997 cc and 2996 cc and 2995 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Discovery has a mileage of . The Discovery is a 7 seater 4 cylinder car. </div>
+
    </div>
   </div>
  </div> <br><br>
@@ -232,38 +251,39 @@
   <div class="first-sub-cont">
    <h2>Jaguar Land Rover </h2>
    <p class="details"> Jaguar Land Rover Automotive PLC is the holding company of Jaguar Land Rover Limited, and is a British multinational automobile manufacturer which produces luxury vehicles and sport utility vehicles. Jaguar Land Rover is a subsidiary of Tata Motors Limited and has its head office in Whitley, Coventry, UK. The principal activity of Jaguar Land Rover Limited is the design, development, manufacture and sale of vehicles bearing the Jaguar and Land Rover marques.
-   <p class="know-more" onclick="jaguarInfo()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
    </p>
   </div>
  </div>
+ <br><br><br>
  <div class="second-container">
   <div class="section-title">
    <h2>Other Models</h2>
   </div>
-  <div class="gr-card"> <img class="gr-img" src="https://content.api.news/v3/images/bin/04e66ab071a52248456fabb50870181f">
+  <div class="gr-card"> <img class="gr-img" draggable="false" src="https://content.api.news/v3/images/bin/04e66ab071a52248456fabb50870181f">
    <div class="gr-details">
     <h4> Jaguar F-Pace</h4>
     <div class="sh-detail-secondary"> <b>• Engine: </b> Diesel/Petrol <br> <b>• Max Speed: </b> 240 Km/h <br> <b>• Tank Capacity (litre) : </b> 69 (approx.) <br> <b>• Price Range: </b>Rs.74.88 lakh - 1.51 Cr* <br> </div>
-    <p class="know-more" onclick="models()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+
    </div>
   </div>
-  <div class="gr-card"> <img class="gr-img" src="https://wallpapercave.com/wp/wp1937976.jpg">
+  <div class="gr-card"> <img class="gr-img" draggable="false" src="https://wallpapercave.com/wp/wp1937976.jpg">
    <div class="gr-details">
     <h4> Jaguar F-Type COUPÉ</h4>
     <div class="sh-detail-secondary"> <b>• Engine: </b> Diesel/Petrol <br> <b>• Max Speed: </b> 250 Km/h <br> <b>• Tank Capacity (litre) : </b> 63 (approx.) <br> <b>• Price Range: </b>Rs.98.13 Lakh - 1.49 Cr* <br> </div>
-    <p class="know-more" onclick="models()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+
    </div>
   </div>
-  <div class="gr-card"> <img class="gr-img" src="https://wallpaperaccess.com/full/5371325.jpg">
+  <div class="gr-card"> <img class="gr-img" draggable="false" src="https://wallpaperaccess.com/full/5371325.jpg">
    <div class="gr-details">
     <h4> Jaguar XE</h4>
     <div class="sh-detail-secondary"> <b>• Engine: </b> Diesel/Petrol <br> <b>• Max Speed: </b> 245 Km/h <br> <b>• Tank Capacity (litre) : </b> 56 (approx.) <br> <b>• Price Range: </b>Rs.46.64 - 48.50 Lakh* <br> </div>
-    <p class="know-more" onclick="models()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+
    </div>
   </div>
+  <p class="know-more" onclick="models()">Browse more <i class="fa fa-chevron-right ic-icon"></i> </p>
  </div>
  <div class="container">
-  <div class="mid-section"> <img class="app-right" src="https://di-uploads-pod16.dealerinspire.com/wildejaguarlandroversarasota/uploads/2019/08/jaguar-reliability.jpg">
+  <div class="mid-section"> <img class="app-right" draggable="false" src="https://di-uploads-pod16.dealerinspire.com/wildejaguarlandroversarasota/uploads/2019/08/jaguar-reliability.jpg">
    <h1>Our Approach</h1>
    <h6> The challenge to build a sustainable, cleaner, greener world is one we at Jaguar Land Rover embrace with relish. Our innovative technologies don’t just make better cars, they can help so many people live better lives in so many ways. That is what we are about at Jaguar Land Rover. Making the world a better place. </h6>
   </div>
@@ -272,30 +292,31 @@
   <div class="section-title">
    <h2>History of Range Rover</h2>
   </div>
-  <div class="gr-card"> <img class="gr-img" src="img/first-gen.webp">
+  <div class="gr-card"> <img class="gr-img" draggable="false" src="img/first-gen.webp">
    <div class="gr-details">
     <h4> First Generation Range Rover</h4>
     <div class="sh-detail-secondary"> The first-generation Range Rover was produced between 1969 and 1996. It was available only in a 2-door body until 1981. (Before then, 4-door models had been produced by specialist firms). </div>
-    <p class="know-more" onclick="generations()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+
    </div>
   </div>
-  <div class="gr-card"> <img class="gr-img" src="img/second-gen.jpg">
+  <div class="gr-card"> <img class="gr-img" draggable="false" src="img/second-gen.jpg">
    <div class="gr-details">
     <h4> Second Generation Range Rover</h4>
     <div class="sh-detail-secondary"> Twenty-five years after the introduction of the original Range Rover, the second-generation (model-designation P38A) was introduced for the 1995 model year </div>
-    <p class="know-more" onclick="generations()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+
    </div>
   </div>
-  <div class="gr-card"> <img class="gr-img" src="img/third-gen.jpg">
+  <div class="gr-card"> <img class="gr-img" draggable="false" src="img/third-gen.jpg">
    <div class="gr-details">
     <h4> Third Generation Range Rover</h4>
     <div class="sh-detail-secondary"> In 2001, the third-generation model was introduced, which saw the model move further upmarket. </div>
-    <p class="know-more" onclick="generations()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+
    </div>
   </div>
+  <p class="know-more" onclick="generations()">Learn more <i class="fa fa-chevron-right ic-icon"></i> </p>
  </div>
  <div class="container">
-  <div class="mid-section"> <img class="app-right" src="img/rr-1.webp">
+  <div class="mid-section"> <img class="app-right" draggable="false" src="img/rr-1.webp">
    <h1>Customers And Products</h1>
    <h5>SUSTAINABLE CHOICES FOR TODAY'S WORLD</h5>
    <h6> The challenge to build a sustainable, cleaner, greener world is one we at Jaguar Land Rover embrace with relish. Our innovative technologies don’t just make better cars, they can help so many people live better lives in so many ways. That is what we are about at Jaguar Land Rover. Making the world a better place. </h6>
