--- a/user/om_73/range rover/index.html
+++ b/user/om_73/range rover/index.html
@@ -322,6 +322,7 @@
    <h6> The challenge to build a sustainable, cleaner, greener world is one we at Jaguar Land Rover embrace with relish. Our innovative technologies don’t just make better cars, they can help so many people live better lives in so many ways. That is what we are about at Jaguar Land Rover. Making the world a better place. </h6>
   </div>
  </div>
+ <div id="info"></div>
  <div id="explore"></div>
 </div>
  <script src="js/global.js"></script>
