--- a/user/om_73/range rover/info.html
+++ b/user/om_73/range rover/info.html
@@ -135,7 +135,7 @@
 
         .grp-img {
             float: right;
-            width: 20%;
+            width: 50%;
             border-right: 0px #242424 solid;
             border-radius: 0px;
             width: 10%;
@@ -187,12 +187,11 @@
         .qr {
             width: 15%;
             border-radius: 28px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.185);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.164);
             transition: all 0.2s ease;
         }
         .qr:hover{
             transform: scale(1.1);
-            border-radius: 28px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.185);;
         }
 
@@ -227,14 +226,14 @@
         .prg-container {
             position: fixed;
             bottom: -620px;
-            left: 20px;
+            left: 40px;
             display: block;
             padding: 10px 20px;
             width: 50%;
             background-color: rgb(255, 255, 255);
             backdrop-filter: blur(0px);
-            border: 2px var(--richColor) solid;
-            border-radius: 0px;
+            border: 2px #ffddab solid;
+            border-radius: 28px;
             box-shadow: 3px 3px 10px rgba(61, 61, 61, 0.233);
             z-index: 9
         }
@@ -277,7 +276,7 @@
         }
 
         progress::-webkit-progress-value {
-            background-color: var(--richColor)
+            background-color: #ffddab
         }
 
         .jag-container {
@@ -318,7 +317,7 @@
             position: relative;
             display: inline-block;
             border: 2px rgba(0, 0, 0, 0) solid;
-            border-radius: 28px;
+            border-radius: 16px;
             padding: 10px 20px;
             margin: 0 5px;
             width: fit-content;
@@ -798,18 +797,18 @@
     <div id="stats" class="prg-container">
 
         <h2>Total Progress</h2>
-        <h6>Last updated : 14 Jun 2022 at 10:38 PM</h6>
+        <h6>Last updated : 25 Jun 2022 at 11:33 PM</h6>
         <div class="prg">
-       <span class="prg-title"> Report Progress: 80% </span><br>
+       <span class="prg-title"> Report Progress: 84% </span><br>
         <progress id="report" value="80" max="100"></progress></div><br>
         <div class="prg">
         <span class="prg-title"> Presentaion Progress: 100%</span><br>
          <progress id="report" value="100" max="100"></progress></div><br>
          <div class="prg">
-         <span class="prg-title"> Website Progress: 97%</span><br>
+         <span class="prg-title"> Website Progress: 100%</span><br>
           <progress id="report" value="97" max="100"></progress></div><br>
 
-          <div class="views"> 22 views • 25 April 2022 </div>
+          <div class="views"> 30 views • Published on 25 April 2022 </div>
         </div>
 
 
