--- a/user/vivek_78/deep learning.html
+++ b/user/vivek_78/deep learning.html
@@ -62,17 +62,27 @@
         <nav class="navbar">
             <ul>
                 <li>
-                    <a class="nav-link" href="#">
-                        Home
+                    <a class="nav-link" href="machine learning.html#query?machine=true,show=false">
+                        Machine Learning
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
-                        Search
+                    <a class="nav-link" href="robotics.html#query?robotics=false,show=false">
+                       Robotics
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="IoT.html#query?iot=true,show=true">
+                        IoT
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link" href="deep learning.html#query?deep=true,show=false">
+                        Deep Learning
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link" href="about.html#query?info=true,show=false">
                         About
                     </a>
                 </li>
@@ -141,6 +151,7 @@
 
         </div>
     </div>
+    <br><br><br><br><br><br>
     <br><br><br><br><br><br>
     <h2>Categories</h2>
 <div class="card" onclick="ai()">
